Wed Nov  6 11:58:40 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/Makefile.am src/dblib/unittests/common.c
	  src/dblib/unittests/common.h src/dblib/unittests/t0001.c
	  src/dblib/unittests/t0002.c src/dblib/unittests/t0003.c
	  src/dblib/unittests/t0004.c src/dblib/unittests/t0005.c
	  src/dblib/unittests/t0006.c src/dblib/unittests/t0007.c
	  src/dblib/unittests/t0008.c src/dblib/unittests/t0009.c
	  src/dblib/unittests/t0010.c src/dblib/unittests/t0012.c
	  src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c
	  src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c
	  src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c
	  src/dblib/unittests/t0020.c src/dblib/unittests/t0021.c
	  src/dblib/unittests/t0022.c src/dblib/unittests/t0023.c:
	- Factor out malloc_options code into a function in common.c.

Wed Nov  6 11:43:51 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* include/ctpublic.h include/sybdb.h src/ctlib/ct.c src/dblib/bcp.c
	  src/dblib/dblib.c:
	- More constification, including public API's.

Fri Nov  6 13:38:22 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/tds.h include/tdsodbc.h:
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/odbc/odbc.c src/tds/token.c src/tds/unittests/t0004.c:
	* src/tds/unittests/t0005.c src/tds/unittests/t0006.c:
	- add TDS_CMD_SUCCEED to tds_process_result_tokens result types
	- tds_process_end set a variable that hold TDS_DONE_* flags
	- update ODBC according (all this stuff started here)

Fri Nov  5 20:47:24 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: pad CHAR and BINARY to proper value

Fri Nov  5 17:08:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c:
	- cleanup

Fri Nov  5 14:10:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: 
	- fix some configuration string and cleanup

Fri Nov  5 09:16:18 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>